--- a/rgb.html
+++ b/rgb.html
@@ -41,7 +41,7 @@
         <br>
         <div class="row">
            <blockquote>
-               <div class="col-xs-12 col-sm-12 col-md-4 col-lg-6" style="border:#F00 solid thin; padding:0px; position:relative; margin-bottom: 20px; left: -10px">       
+               <div class="col-xs-12 col-sm-12 col-md-4 col-lg-5" style="border:#F00 solid thin; padding:0px; position:relative; margin-bottom: 20px; left: -10px">       
                     <div class="alert alert-danger" style="border-bottom:#F00 solid thin">
                         <p>
                             <b><span class="red">Red</span> <span class="green">Green</span> <span class="blue">Blue </span> (<span class="red">R</span><span class="green"	
@@ -59,9 +59,9 @@
                             </p> 
                     </div>
             	</div>
-
                 
-            	<div class="col-xs-12 col-sm-12 col-md-4 col-lg-6" style="border:#0F0 solid thin; padding:0px;  position: relative; margin-bottom: 20px; left: -10px;">
+                
+            	<div class="col-xs-12 col-sm-12 col-md-4 col-lg-5 col-lg-offset-1" style="border:#0F0 solid thin; padding:0px;  position: relative; margin-bottom: 20px; left: -10px;">
                     <div class="alert alert-success" style="border-bottom:#0F0 solid thin;">
                         <p>
                             <b>
